# LIS_FINGERSPELLING

./: .gitignore  README.md  pyproject.toml  requirements.txt
First_Lecture/: 1_basic_data.ipynb  1_basic_data_SOL.ipynb
Second_Lecture/: 1.discriminatore_AND.ipynb  2.model_testing.ipynb  3.mnist.ipynb  discriminatore_AND_solution.ipynb  mnist_solution.ipynb
Third_Lecture/: 1.CLIP.ipynb  2.0.train_recognition.ipynb  2.1.real_time_inference_cnn.ipynb  2.2.train_recognition_SOL.ipynb  3.generate_landmark_dataset.ipynb  4.0.train_landmark_recognition.ipynb  4.1.real_time_inference_landmark.ipynb  5.data_collection.ipynb
Third_Lecture/checkpoint/cnn/: reverselookup.pickle
Third_Lecture/checkpoint/landmark/: best_model.pth  label_encoder.pkl
